--- a/style.css
+++ b/style.css
@@ -10,3 +10,25 @@
     width: 150px;
     margin-top: 50px;
 }
+
+h1 {
+    font-size: 50px;
+    margin: 0 5px 0 5px;
+}
+
+#intestazione {
+    color: grey ;
+}
+
+#autore {
+    color: rgb(0, 204, 255);
+}
+
+#immagini_tim {
+    margin-top: 30px;
+    margin-bottom: 0px;
+}
+
+.didascalia {
+    margin-top: 0px;
+}
