--- a/style.css
+++ b/style.css
@@ -32,3 +32,59 @@ h1 {
 .didascalia {
     margin-top: 0px;
 }
+
+.paragrafo {
+    height: 100px;
+    margin-top: 50px;
+}
+
+ul {
+    margin-bottom: 50px;
+}
+
+table {
+    width: 100%;
+    height: 200px;
+}
+
+#int_tabella {
+    background-color: rgb(0, 119, 255);
+}
+.azzurro {
+    background-color: rgb(0, 217, 255);
+}
+
+
+.th0 {
+    width: 25%;
+    height: 20px;
+}
+#th2 {
+    height: 20px;
+    width: 50%;
+}
+.prima {
+    height: 60px;
+    width: 25%;
+}
+.seconda {
+    height: 60px;
+    width: 50%;
+}
+h4 {
+    color: grey;
+}
+#articolo1 {
+    background-image: url(img/monitor.jpg);
+    height: 150px;
+    width: 150px;
+    color: white;
+    margin-bottom: 10px;
+}
+#articolo2 {
+    background-image: url(img/graph.jpg);
+    height: 150px;
+    width: 150px;
+    color: white;
+}
+
