--- a/style.css
+++ b/style.css
@@ -45,10 +45,12 @@ ul {
 table {
     width: 100%;
     height: 200px;
+    border-collapse: collapse;
 }
 
 #int_tabella {
     background-color: rgb(0, 119, 255);
+    
 }
 .azzurro {
     background-color: rgb(0, 217, 255);
@@ -58,6 +60,7 @@ table {
 .th0 {
     width: 25%;
     height: 20px;
+    
 }
 #th2 {
     height: 20px;
